fix: handle height vieport on mobile

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -2,19 +2,27 @@
 
 $color-hilight: #fdfdfd;
 
+html,
+body {
+  height: 100%;
+}
+
 body {
   font-family: sans-serif;
   background-color: #fff;
   padding: 0;
   margin: 0;
+
+  > div {
+    height: 100%;
+  }
 }
 
 .maincontent {
   display: flex;
   justify-content: center;
   align-items: flex-end;
-  height: 100%;
-  min-height: 100vh;
+  min-height: 100%;
   width: 100%;
 
   box-sizing: border-box;
